[project]
name = "self-prorcess-manager-backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databases[sqlite]>=0.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.2",
]
